# json-diff

./: .gitignore  Cargo.toml  README.md  install.sh  package.sh
.github/workflows/: release.yml
.github/workflows/release.yml/: release.yml
src/: main.rs
